# RayTracer

./: .gitignore  README.md
s2899221/: CMakeLists.txt  FeatureList.txt  Makefile  System.txt  render_test1.bat  render_test2.bat  time_bvh.bat  time_bvh.ps1
s2899221/ASCII/: 200_rand_1_cam.json  50_rand_1_cam.json  Test1.json  Test2.json  cube_camera.json  cube_cylinder_plane_sphere_camera.json  cube_plane_camera.json  cubes.json  cylinders.json  lab2.json  planes.json  random.json  spheres.json  toy_scene_for_render.json  toy_scene_for_render_with_materials.json
s2899221/Blend/: Export.py  ImportRays.py
s2899221/Code/: Makefile  camera.cpp  image.cpp  image.h  mesh.cpp  mesh.h  persp_camera.cpp  persp_camera.h  raytracer.cpp  raytracer.h  render_driver.cpp  utils.cpp  utils.h
s2899221/Code/apps/: rt_render.cpp
s2899221/Code/include/raytracer/accel/: AABB.h  BVH.h
s2899221/Code/include/raytracer/core/: Camera.h  Material.h  Renderer.h  Scene.h
s2899221/Code/include/raytracer/geometry/: Cube.h  Cylinder.h  Mesh.h  Plane.h  Sphere.h
s2899221/Code/include/raytracer/math/: Mat4.h  Vec2.h  Vec3.h
s2899221/Code/include/raytracer/utils/: Hit.h  Image.h  Json.h  Ray.h  Texture.h
s2899221/Code/src/accel/: AABB.cpp  BVH.cpp
s2899221/Code/src/core/: Renderer.cpp  Scene.cpp
s2899221/Code/src/geometry/: Cube.cpp  Cylinder.cpp  Plane.cpp  Sphere.cpp
s2899221/Code/src/math/: Mat4.cpp
s2899221/Code/src/utils/: Image.cpp  Json.cpp  Texture.cpp
s2899221/Code/tools/: view_ppm.py
s2899221/Output/: Test1.ppm  Test2.ppm  Test2_bvh.ppm  Test2_nobvh.ppm
(+40 files in other folders)
